--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                        </div>
 
                 <div class="options">
-                    <a href="#" class="option"><ion-icon name="grid"></ion-icon>Categories</a>
+                    <a href="#" class="option"><ion-icon name="grid"  style="margin-right:10px ;"></ion-icon>Categories</a>
                     <a href="#" class="option"><i class="fa-brands fa-windows"></i>Windows</a>
                     <a href="#" class="option"><i class="fa-brands fa-apple"></i>Mac</a>
                     <a href="#" id="option"><box-icon type='logo' name='android'></box-icon>Android</a>
